<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.javier.photos.PictureDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarLayoutHeight"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/imageHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                android:background="@drawable/image"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"
                android:transitionName="@string/transition_name_picture"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorTextWhite"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/userNameDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/usernameTextSizedetail"
            android:text="@string/usernane_card"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/likeNumberDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumberdetail"
                android:text="10"

                />

            <TextView
                android:id="@+id/secondWordDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_likenumberdetail"
                android:text="@string/secondword_detail"
                android:layout_marginLeft="@dimen/marginleft_secondword"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/heigh_divider"
            android:background="@android:color/darker_gray"
            />


        <TextView
            android:id="@+id/titleImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_likenumberdetail"
            android:text="@string/titleImage"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:paddingTop="@dimen/padding_top_title" />

        <TextView
            android:id="@+id/txtContentImageDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize_likenumberdetail"
            android:text="@string/lorem"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:paddingTop="@dimen/padding_top_title"
            android:paddingLeft="@dimen/padding_horizontal_textcontentdetail"
            android:paddingRight="@dimen/padding_horizontal_textcontentdetail"
            />

    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_anchor="@+id/appBarLayout"
         app:layout_anchorGravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/heart"


         />

    </android.support.design.widget.CoordinatorLayout>
